Fix(Storage): Fix an event bug that overflow content cannot scroll. (issue #542)

--- a/src/core/style/view.less
+++ b/src/core/style/view.less
@@ -107,6 +107,7 @@
   font-size: (15em / @font);
   height: 100%;
   width: 100%;
+  padding: (15em / @font) 0;
   text-align: center;
   display: flex;
   flex-direction: column;
